# fbb_ws63_cmake

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  CMakePresets.json
src/application/samples/: CMakeLists.txt
src/application/samples/bt/sle/sle_speed_client/src/: sle_speed_client.c
src/application/samples/bt/sle/sle_speed_server/src/: sle_speed_server_adv.c
src/application/samples/peripheral/: CMakeLists.txt  Kconfig
src/application/samples/peripheral/helloworld/: helloworld.c
src/application/samples/radar/: CMakeLists.txt  Kconfig
src/application/samples/radar/softap_sample/: radar_softap_sample.c
src/application/samples/radar/sta_sample/: radar_sta_sample.c
src/application/samples/wifi/ohos_connect/hilink_adapt/include/: oh_sle_connection_manager.h  oh_sle_errcode.h
src/bootloader/commonboot/src/: boot_ymodem.c
src/drivers/chips/ws63/porting/efuse/: efuse_porting.c
src/drivers/chips/ws63/porting/spi/: spi_porting.c
src/drivers/drivers/hal/uart/: CMakeLists.txt
src/drivers/drivers/hal/watchdog/: CMakeLists.txt
src/include/middleware/services/bts/sle/: sle_connection_manager.h
src/infra_build/: README.md
src/infra_build/cmake/: build_boot_bin_cp.cmake  build_elf_info.cmake  build_hso_database.cmake  build_nv_bin.cmake  build_partition_bin.cmake  build_script.cmake  build_sign.cmake  build_ssb.cmake
src/infra_build/config/target_config/ws63/: build_nvbin.py  build_ws63_update.py
src/infra_build/config/target_config/ws63/hdb_config/database_cfg/: mk_hdb_xml.json
src/infra_build/config/target_config/ws63/script/: entry.py  get_mem_bin.sh  pke_rom.sh  rom_in_one.sh  ws63_mfg_build.py
src/infra_build/config/target_config/ws63/sign_config/: params_and_bin_sign.py
src/infra_build/script/: build_nvbin.py  cmake_build.py  cmake_builder.py  codesize_statistic.py  conf_parser.py  enviroment.py  export_build_contract.py  export_target_env.py  usr_config.py
src/infra_build/script/hdbxml/: bt_status_to_hso_prim_xml.py  database_create.py  hso_prim_xml_merge.py  mk_hso_prim_xml.py  mk_hso_prim_xml_dsp.py  ota_msg_to_hso_prim_xml.py  process_pregenerated_xml.py
src/infra_build/script/hdbxml_custom/MessageXmlGen/: MessageXmlGen.py  messagexmlgen.cmake
src/infra_build/script/image_analysis/: build_data_analyzer_allinone.py
src/infra_build/script/nv/: conf_parser.py  nv_binary.py
src/infra_build/script/sdk_generator/: project_generator.py  sdk_generator.py
src/infra_build/script/sdk_generator/sdk_template/makefile/: template.mk
src/infra_build/script/utils/: build_utils.py  parse_map_size_info.py  targets_compare.py
src/middleware/chips/ws63/dfx/include/: diag_config.h
src/middleware/chips/ws63/nv/nv_config/: CMakeLists.txt
src/middleware/chips/ws63/nv/nv_config/include/: nv_common_cfg.h
src/middleware/utils/at/at_plt_cmd/at/: at_plt_cmd_table.h
src/middleware/utils/at/at_radar_cmd/at/: at_radar_cmd_table.h
src/middleware/utils/at/at_wifi_cmd/at/: at_wifi.h
src/middleware/utils/dfx/zdiag/: zdiag_channel.c
src/middleware/utils/dfx/zdiag/diag_system_cmd/: diag_cmd_beat_heart.c
src/middleware/utils/hcc/cfg/: hcc_cfg.h  hcc_cfg_comm.h
src/middleware/utils/hcc/comm/: hcc.h  hcc_flow_ctrl.h
src/middleware/utils/hcc/inc/: hcc_test.h
src/open_source/lvgl/: CMakeLists.txt  CmakeLists.txt
src/open_source/lwip/lwip_adapter/liteos_207/src/include/: lwipopts.h
src/protocol/bt/controller/bgtp/: ws63.cmake
src/protocol/bt/controller/chba/: achba.cmake  sle_netdev.cmake
src/protocol/bt/host/bt/: bt_app.cmake  bt_host.cmake
src/protocol/bt/host/bt/ahi/ahi_b/: ahi_b.cmake
src/protocol/bt/host/gle/: bth_gle.cmake
src/protocol/wifi/source/host/inc/oal/: oal_net_cfg80211.h
src/tools/pkg/chip_packet/ws63/: packet.py
tools/: HiSparkStudio插件版编译及烧录.md
